# prepkit

./: .gitattributes  .gitignore  .mcp.json  DOGFOODING.md  README.ja.md  README.md  TESTING.md  pyproject.toml  pytest.ini  競技プログラミング支援ツール開発計画.md
.claude/: claude_config.json  instructions.md
.github/: CONTRIBUTING.md
.github/workflows/: test.yml
.prepkit/ai-assistants/: claude-code.md
.prepkit/claude-code/: debugging.md  review.md  setup.md
.serena/: project.yml
atcoder_algo_project/: prepkit_config.yaml
codingame_project/: prepkit_config.yaml
configs/ai-assistants/: antigravity-cli.md  gemini-cli.md  github-copilot.md
examples/: README.md
examples/atcoder_marathon/: tsp_solver.cpp
examples/beam_search/: optimize.py  solution.cpp
examples/optuna_integration/: README.md  optimize.py  solution.cpp
examples/wandb_sweeps/: sweep_config.yaml  train.py
my_new_cpp_project/: main.cpp
scripts/: validate_pipeline.sh
src/: ai_assistant_config.py  config.py  experiment_manager.py  kaggle_automation.py  main.py  preprocessing_utils.py
src/boilerplate/: project_configs.yaml
src/boilerplate/claude_configs/: codingame_settings.json  disabled_settings.json  kaggle_settings.json
src/boilerplate/cpp/: .gitignore  README.md  main.cpp  template.hpp
src/boilerplate/cpp/includes/: data_structures.hpp  graph.hpp  utils.hpp
src/boilerplate/mcp_configs/: codingame_mcp.json  disabled_mcp.json  kaggle_mcp.json
src/commands/: cpp_commands.py  project_commands.py  rust_commands.py  test_command.py  test_scoring.py  test_suite.py
src/plugins/: cpp_plugin.py  kotlin_plugin.py  rust_plugin.py
src/prepkit/: cpp_preprocessor.py  experiment_manager.py  kaggle_automation.py  main.py  plugins.py
src/prepkit/plugins/: cpp_plugin.py  kotlin_plugin.py  rust_plugin.py
tests/: conftest.py  test_ai_assistant_config.py  test_cli.py  test_cpp_integration.py  test_cpp_preprocessor.py  test_cpp_preprocessor_enhanced.py  test_error_messages.py  test_kaggle_automation.py  test_preprocessing_utils.py  test_rust_integration.py  test_test_command.py
tests/__snapshots__/: test_cpp_integration.ambr  test_rust_integration.ambr
tests/cpp_test_cases/algorithm_templates/segment_tree/: main.cpp  segment_tree.hpp
tests/cpp_test_cases/competitive_examples/atcoder_solution/: math_utils.hpp  solution.cpp  template.hpp
tests/cpp_test_cases/competitive_examples/codingame_size_constrained/: main.cpp
tests/cpp_test_cases/constexpr_scenarios/complex_constants/: main.cpp
tests/cpp_test_cases/edge_cases/string_literals/: main.cpp  utils.hpp
tests/cpp_test_cases/include_resolution/nested_includes/: level1.hpp  level2.hpp  level3.hpp  main.cpp
tests/cpp_test_files/: constants.hpp  constexpr_test.cpp  header.hpp  main.cpp
tests/fixtures/rust/cfg_attributes/: main.rs
tests/fixtures/rust/const_inlining/: main.rs
tests/fixtures/rust/custom_paths/: main.rs
(+28 files in other folders)
