[tool.poetry]
name = "prepkit"
version = "0.1.0"
description = "A tool to streamline competitive programming and machine learning workflows."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
clang = "^16.0.6"
hydra-core = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prepkit = "prepkit.main:cli"
