[tool.poetry]
name = "prepkit"
version = "0.1.0"
description = "A tool to streamline competitive programming and machine learning workflows."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
clang = "^16.0.6"
hydra-core = "^1.3.2"
optuna = "^3.6.1"
optuna-integration = "*"
wandb = "^0.17.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
syrupy = "^4.6.0"
hypothesis = "^6.0.0"
pytest-xdist = "^3.0.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prepkit = "prepkit.main:cli"

[tool.poetry.plugins."prepkit.preprocessors"]
rust = "prepkit.plugins.rust_plugin:RustPreprocessor"
kotlin = "prepkit.plugins.kotlin_plugin:KotlinPreprocessor"
cpp = "prepkit.plugins.cpp_plugin:CppPreprocessor"

[tool.poetry.plugins."prepkit.minifiers"]
rust = "prepkit.plugins.rust_plugin:RustMinifier"
kotlin = "prepkit.plugins.kotlin_plugin:KotlinMinifier"
