[project]
name = "prepkit"
version = "0.1.0"
description = "A tool to streamline competitive programming and machine learning workflows."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7,<9.0",
    "clang>=16.0.6,<17.0",
    "hydra-core>=1.3.2,<2.0",
    "optuna>=3.6.1,<4.0",
    "optuna-integration",
    "wandb>=0.17.0,<1.0",
    "pyyaml>=6.0.1,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-cov>=4.1.0,<5.0",
    "syrupy>=4.6.0,<5.0",
    "hypothesis>=6.0.0,<7.0",
    "pytest-xdist>=3.0.0,<4.0",
    "pytest-benchmark>=4.0.0,<5.0",
]

[project.scripts]
prepkit = "main:cli"

[project.entry-points."prepkit.preprocessors"]
rust = "plugins.rust_plugin:RustPreprocessor"
kotlin = "plugins.kotlin_plugin:KotlinPreprocessor"
cpp = "plugins.cpp_plugin:CppPreprocessor"

[project.entry-points."prepkit.minifiers"]
rust = "plugins.rust_plugin:RustMinifier"
kotlin = "plugins.kotlin_plugin:KotlinMinifier"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
